# graphic-labs

./: CMakeLists.txt  buildSubproject.ps1  readme.md
docs/: lab1.docx  lab2.docx  lab3.docx
lab1/: CMakeLists.txt  main.cpp
lab2/: машинка.xcf
labBlend/: untitled.blend  untitled.blend1
